--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <title>Porfolio Website - John Doe</title>
 </head>
 <body>
+  <!-- default wrapper container -->
     <div id="wrapper">
 
+      <!-- container for keeping the navbar and hero-section within a width of 1200px -->
         <div class="container">
+          <!-- navbar -->
             <div class="navbar">
                 <div class="logo-container">
                   <img src="./images/userAsset/NavLogo.jpg" class="logo"> 
@@ -28,6 +31,7 @@
                     <div><a href="#contactme">Contact Me</a></div>
                 </div>
             </div>
+            <!-- hero section -->
             <div class="hero-section">
                 <div class="absolute faded-text">John Doe</div>
                 <div class="hero-section-left">
@@ -63,7 +67,8 @@
             </div>
         </div>
 
-        <div class="project-section">
+        <!-- project section -->
+        <div class="projects-section">
             <h2 class="page-header">Projects</h2>
 
             <div class="project-container">
@@ -180,6 +185,57 @@
                     </div>
                   </div>
             </div>
+        </div>
+
+        <!-- skills section -->
+        <div id="skills" class="container skills-container">
+          <div class="skill-fade-text">Skills</div>
+
+          <div class="skill-container-left">
+            <h2 class="skill-heading">
+              <span class="caps">M</span>e and
+              <br>
+              MyTech Stack
+            </h2>
+
+            <div class="skill-subHeading">
+              <p>
+                Hi Everyone My name is John Doe I am a Full Stack Web Developer I have been working for last 3 Years and Currently I am working with a Budding Startup in USA and a full Time Freelancer. Currently I am working on NextJs and Making Beautiful UI-UX are my fey features
+              </p>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non doloremque aspernatur, maiores voluptatum minus laudantium? Perspiciatis accusamus minima porro dolores necessitatibus, magni dolorem et qui veniam nulla sequi molestiae maxime.
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quidem quos ullam veritatis voluptates tenetur qui ipsa nulla culpa itaque?
+              </p>
+            </div>
+          </div>
+
+          <div class="skill-container-right">
+            <img src="./images/userAsset/blob vector.png" alt="" class="blob-style">
+
+
+            <img src="./images/stack/HTML.png" alt="" class="skills-logo">
+            <img src="./images/stack/CSS.png" alt="" class="skills-logo">
+            <img src="./images/stack/Javascript.svg" alt="" class="skills-logo">
+            <img src="./images/stack/React.png" alt="" class="skills-logo">
+            <img src="./images/stack/NodeJs.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Next.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Redux.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Tailwind.png" alt="" class="skills-logo">
+            <img src="./images/stack/Bootstrap.svg" alt="" class="skills-logo">
+            <img src="./images/stack/MaterialUI.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Express.png" alt="" class="skills-logo">
+            <img src="./images/stack/Git.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Github.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Graphql.svg" alt="" class="skills-logo">
+            <img src="./images/stack/MongoDB.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Vercel.svg" alt="" class="skills-logo">
+            <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Bash.svg" alt="" class="skills-logo">
+            <img src="./images/stack/Docker.svg" alt="" class="skills-logo">
+            <img src="./images/stack/K8s.svg" alt="" class="skills-logo">
+          </div>
         </div>
 
     </div>
