--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <!-- project section -->
-        <div class="projects-section">
+        <div class="projects-section" id="projects">
             <h2 class="page-header">Projects</h2>
 
             <div class="project-container">
@@ -237,6 +237,64 @@
             <img src="./images/stack/K8s.svg" alt="" class="skills-logo">
           </div>
         </div>
+
+        <div class="contactus-form-container" id="contactme">
+          <div class="container">
+
+            <h1 class="contactus-heading">Contact Me</h1>
+
+            <h3 class="contactus-sub-heading">Questions, thoughts, or just want to stay hello?</h3>
+
+            <div class="contactus-form-container">
+              <form class="form" action="">
+                <div class="formfeild-container">
+                  <input class="formfield" type="text" name="name" id="" placeholder="Enter your name">
+
+                  <input class="formfield" type="email" name="email" id="" placeholder="Enter your email address">
+
+                  <input class="formfield" type="text" name="subject" id="" placeholder="Enter your subject">
+
+                  <textarea name="message" id="" cols="30" rows="10" class="formfield formfield-textarea" placeholder="Enter your message">
+                </div>
+
+                <div>
+                  <button type="submit" class="btn-pink" id="submit-btn">
+                    Send Message<i class="submit-icon fa-solid fa-paper-plane"></i>
+                  </button>
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <footer>
+          <div class="container">
+            <div class="footer-wrapper">
+              <div class="footer-faded-text">John Doe</div>
+
+              <div class="link-wrapper">
+                <div>
+                  <a href="#projects">Projects</a>
+                </div>
+                <div>
+                  <a href="#skills">Skills</a>
+                </div>
+                <div>
+                  <a href="#contactme">Contact Me</a>
+                </div>
+
+                <div class="icon-wrapper">
+                  <i class="fa-brands fa-linkedin icon"></i>
+                  <i class="fa-brands fa-github icon"></i>
+                  <i class="fa-brands fa-twitter icon"></i>
+                  <i class="fa-brands fa-instagram icon"></i>
+                  <i class="fa-regular fa-envelope icon"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
 
     </div>
 
