--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
           </div>
         </div>
 
+        <!-- form section -->
         <div class="contactus-form-container" id="contactme">
           <div class="container">
 
@@ -268,6 +269,7 @@
           </div>
         </div>
 
+        <!-- footer section -->
         <footer>
           <div class="container">
             <div class="footer-wrapper">
